# ActionEditor4

./: .gitignore  AGENT.md  README.md
browser/: .gitignore  README.md  jsconfig.json  package-lock.json  package.json
editor/: TODO.md  main.py  tasks.md  translations.md
mapeditor/: .jsconfig.json  index.html  package.json  pnpm-lock.yaml
modloader/: CMakeLists.txt  README.md  vcpkg.json
modloader/src/: dllmain.cpp
original/: CHANGELOG.md  DISTRIBUTION.md  README.md  test_frida.bat
patches/: font_8px.js
patterns/: Stage4-WiP2.hexpat  Stage4-WiP2.rs  cplt4.hexpat
src/: Animation_Execution_Details.cpp  Animation_Execution_Details.h  Arrangement_Details.cpp  Arrangement_Details.h  BGM_Playback_Details.h  Background.cpp  Background.h  Background_Change_Details.cpp  Background_Change_Details.h  Basic_Animation_Set_Change_Details.cpp  Basic_Animation_Set_Change_Details.h  Basic_Condition.cpp  Basic_Condition.h  Block.cpp  Block.h  Block_Summon_Details.cpp  Block_Summon_Details.h  Character.cpp  Character.h  Character_Effect_Database.cpp  Character_Effect_Database.h  Character_Effect_Execution_Details.cpp  Character_Effect_Execution_Details.h  Character_Exclusive_Bmp_Database.cpp  Character_Exclusive_Bmp_Database.h  Character_Summon_Details.cpp  Character_Summon_Details.h  Charge_Movement_Details.cpp  Charge_Movement_Details.h  Circular_Movement_Details.cpp  Circular_Movement_Details.h  Code_Execution_Details.cpp  Code_Execution_Details.h  Command.cpp  Command.h  Common_Palette.cpp  Common_Palette.h  CopyDirectoryIfNeeded.c  Direction_Change_Details.cpp  (+98 more)
(+345 files in other folders)
